--- a/ErrorHandling/package.json
+++ b/ErrorHandling/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "method-override": "^3.0.0"
   }
 }
